--- a/index.html
+++ b/index.html
@@ -4,28 +4,31 @@
 <meta charset="UTF-8">
 <title>LaundrIQ Pages</title>
 
+</head>
 <style>
     body{
-        background:#1b1c29;
+        background:#ffffff;          /* WHITE PAGE */
         font-family:Segoe UI, Arial, sans-serif;
         padding:20px;
-        color:#fff;
+        color:#000;
     }
 
     .table-wrap{
-        margin-bottom:30px;
+        margin:0 auto 30px auto;     /* CENTER TABLE WRAPPER */
+        width:fit-content;           /* SHRINK TO TABLE SIZE */
         overflow-x:auto;
     }
 
     table{
         border-collapse:collapse;
-        background:#2b2b2b;
-        color:#fff;
+        background:#ffffff;          /* WHITE TABLE */
+        color:#000;
         font-size:13px;
+        margin:0 auto;               /* CENTER TABLE */
     }
 
     th, td{
-        border:1px solid #555;
+        border:1px solid #999;       /* KEEP GRID */
         padding:6px 8px;
         text-align:left;
         white-space:nowrap;
@@ -33,13 +36,13 @@
 
     th{
         font-weight:600;
+        background:#f2f2f2;          /* LIGHT HEADER (OPTIONAL BUT CLEAN) */
     }
 
     .status{
         text-align:center;
     }
 </style>
-</head>
 
 <body>
 
